<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">OSU Activity Tracker Debug App</string>
    <string name="app_name">ActivityGpsTracker</string>
    <string name="HelloX">x,x,x</string>
    <string name="accel_title">Accelerometer Data</string>
    <string name="gps_title">GPS Data</string>
    <string name="time_title">Current Timestamp</string>
    <string name="wificheckbox">Enable WiFi Tracking</string>
    <string name="commitsettings">Commit Settings</string>
    <string name="settingstitle">Background Settings</string>
    <string name="gpscheckbox">Enable GPS Tracking</string>
    <string name="accelcheckbox">Enable Accelerometer Logging</string>
    <string name="gyrocheckbox">Enable Gyroscope Logging</string>
    <string name="gyro_title">Gyro Data</string>
    <string name="OK">Ok</string>
</resources>
